# learn-c

./: CMakeLists.txt  main.cpp
cmake/: CFlowControl.cmake  CPrint.cmake
include/: global.h
src/: CMakeLists.txt  global.h  main.cpp
src/math/: CMakeLists.txt  math.cpp  math.h
src/say/: CMakeLists.txt  say.cpp  say.h
